--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
@@ -20,14 +21,18 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
-    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "croppie": "^2.6.4",
     "jquery": "^3.3.1",
-    "radium": "^0.25.1",
     "react": "^16.5.2",
+    "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.11"
+    "react-hot-loader": "^4.3.11",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "socket.io-client": "^2.2.0",
+    "spotify-web-api-js": "^1.2.0"
   }
 }
